<?xml version="1.0" encoding="utf-8"?>
<resources>

    <drawable name="clr_normal">#00000000</drawable>
    <drawable name="near000">#01000000</drawable>
    <drawable name="clr_pressed">#AEEEEE</drawable>
    <drawable name="clr_enabled">#111111</drawable>
    <drawable name="clr_alert_enabled">#CD3333</drawable>
    <drawable name="clr_disabled">#666666</drawable>
    <drawable name="pageViewBtn_textColor">#FEEEEE</drawable>

    <string name="menu_gxhb">工序汇报单</string>
    <string name="menu_cprk">产品入库单</string>
    <string name="menu_xsck">销售出库单</string>
    <string name="menu_scll">生产领料单</string>
    <string name="menu_bcprk">半成品入库单</string>
    <string name="frame_退出">退出</string>
    <string name="frame_new">新增</string>
    <string name="frame_条码信息">条码信息</string>
    <string name="frame_提交保存">提交</string>
    <string name="frame_单据退出">退出</string>
    <string name="frame_保存">保存</string>
    <string name="frame_确认">确认</string>
    <string name="frame_搜索">搜索</string>
    <string name="frame_返回">&lt;</string>
    <string name="frame_返回1">返回</string>
    <string name="frame_重置">重置</string>
    <string name="frame_主菜单">主菜单</string>
    <string name="frame_删除">删除</string>
    <string name="frame_注销">注销</string>
    <string name="frame_详情">详细信息</string>
    <string name="app_name">CopyOfHY</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_downloading">正在下载</string>
    <string name="soft_update_cancel">取消</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
<string name = "dialog_title">选择操作</string>
    <string name="btn_tx1">发现</string>
    <string name="check">离线</string>
</resources>