<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <Button
        android:id="@+id/head_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/button_custom_selector"
        android:text="@string/frame_保存"
        android:textColor="@drawable/button_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/head_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:layout_toLeftOf="@+id/head_btn_save"
        android:background="@drawable/button_custom_selector"
        android:text="@string/frame_提交保存"
        android:textColor="@drawable/button_text"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:focusable="true"
		android:focusableInTouchMode="true" />
    
    <Button
        android:id="@+id/head_btn_new"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/head_btn_billexit"
        android:background="@drawable/button_custom_selector"
        android:text="@string/frame_new"
        android:textColor="@drawable/button_text"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/head_btn_billexit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/button_custom_selector"
        android:text="@string/frame_单据退出"
        android:textColor="@drawable/button_text"
        android:textStyle="bold" />
</RelativeLayout>